--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,13 +18,13 @@ build:
 requirements:
   host:
     - pip
-    - python
+    - python >=3.6
   run:
     - azure-core <2.0.0,>=1.0.0
     - cryptography >=2.1.4
     - msal <2.0.0,>=1.3.0
     - msal_extensions >=0.2.2,<0.3.0
-    - python
+    - python >=3.6
     - six >=1.6
 
 test:
