--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,8 +22,8 @@ requirements:
   run:
     - azure-core <2.0.0,>=1.0.0
     - cryptography >=2.1.4
-    - msal <2.0.0,>=1.3.0
-    - msal_extensions >=0.2.2,<0.3.0
+    - msal <2.0.0,>=1.6.0
+    - msal_extensions ~=0.3.0
     - python >=3.6
     - six >=1.6
 
