--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,9 +20,9 @@ requirements:
     - pip
     - python >=3.6
   run:
-    - azure-core <2.0.0,>=1.0.0
+    - azure-core >=1.11.0,<2.0.0
     - cryptography >=2.1.4
-    - msal <2.0.0,>=1.7.0
+    - msal >=1.12.0,<2.0.0
     - msal_extensions ~=0.3.0
     - python >=3.6
     - six >=1.12
