Remove `pip check` until `msal-extensions` releases an updated package.\n\nhttps://github.com/AzureAD/microsoft-authentication-extensions-for-python/pull/97

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,10 +31,10 @@ test:
   imports:
     - azure.identity
     - azure.identity._credentials
-  commands:
-    - pip check
-  requires:
-    - pip
+  # commands:
+  #   - pip check
+  # requires:
+  #   - pip
 
 about:
   home: https://github.com/Azure/azure-sdk-for-python/tree/master/sdk/identity/azure-identity
