--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - azure-core >=1.11.0,<2.0.0
     - cryptography >=2.5
     - msal >=1.12.0,<2.0.0
-    - msal_extensions ~=0.3.0
+    - msal_extensions >=0.3.0,<2.0.0
     - python >=3.6
     - six >=1.12
 
